get status by taskId

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,5 @@
 task.notExistsById=Задачи с идентификатором {0} не существует
+task.cannotDeleteById=Невозможно удалить задачу с id {0}
+task.deleteByIdSuccess=Задача с id {0} успешно удалена
+
+kafka.producer.send=Задача успешно отправлена в kafka
